--- a/Src/index.html
+++ b/Src/index.html
@@ -74,8 +74,6 @@
             </div>
 
         </div>
-
-
     </template>
 
     <template><!-- Cuadro de pantalla de inicio Instructor -->
@@ -83,17 +81,26 @@
             <div class="card p-4" id="containerPrincipal">
                 <!-- Encabezado de pagina principal -->
                 <div class="titulo">
-                    <h1 class="card-title" style="color: #00304D;"><strong>Bienvenido de nuevo, <span
-                                style="color: #39A900;">Nombre de usuario</span> ¿Qué deseas realizar el dia de
-                            hoy?</strong></h1>
+                    <h1 class="card-title" style="color: #00304D;"><strong>Bienvenido de nuevo, ¿Qué deseas realizar el
+                            <span style="color: #39A900;">
+                                dia de hoy</span>?</h1>
                 </div>
 
                 <!-- Botones de navegacion -->
-                <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
-                    <button id="btnMakeAssistance" class="btn btn-primary mb-2">Registrar asistencia</button>
-                    <button id="btnCheckHistory" class="btn btn-primary mb-2">Historial de asistencia</button>
-                    <button id="btnMakeReport" class="btn btn-primary mb-2">Generar reporte</button>
-                    <button id="btnCheckUserManual" class="btn btn-primary">¿Necesitas ayuda?</button>
+                <div class="d-flex align-content-stretch flex-wrap" style="width: 80%; margin: 0 auto;"
+                    id="btnNavegationHome">
+                    <button class="btnNavegation" type="button" id="btnCheckCourse"><strong>Marcar
+                            asistencia</strong></button>
+                    <button class="btnNavegation" type="button" id="btnCheckHistory"><strong>Ver
+                            Historial</strong></button>
+                    <button class="btnNavegation" type="button" id="btnMakeReport"><strong>Generar
+                            reporte</strong></button>
+                    <button class="btnNavegation" type="button" id="btnFollowUpPlan"><strong>Plan
+                            seguimiento</strong></button>
+                    <button class="btnNavegation" type="button" id="btnCheckNotifications"><strong>Ver
+                            notificaciones</strong></button>
+                    <button class="btnNavegation" type="button" id="btnCheckUserManual"><strong>¿Necesitas
+                            ayuda?</strong></button>
                 </div>
 
                 <!-- Pie de pagina -->
@@ -105,8 +112,9 @@
         </div>
     </template>
 
+
     <div class="container-fluid d-flex" id="workArea">
-        <!-- Menú de opciones -->
+        <!-- HTML -->
         <div class="card p-2" id="optionMenu">
             <!-- Parte superior del menú lateral -->
             <div class="d-flex justify-content-center">
@@ -131,20 +139,17 @@
             <!-- Botones de navegacion del menú lateral -->
             <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
                 <div id="btnNavegationMenu">
-                    <button class="btnNavegation" type="button" a href="..." id="btnMakeAssistance"><strong>Registrar
+                    <button class="btnNavegation" type="button" id="btnCheckCourse"><strong>Marcar
                             asistencia</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckHistory"><strong>Historial
-                            de
-                            asistencia</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnMakeReport"><strong>Generar
+                    <button class="btnNavegation" type="button" id="btnCheckHistory"><strong>Ver
+                            Historial</strong></button>
+                    <button class="btnNavegation" type="button" id="btnMakeReport"><strong>Generar
                             reporte</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckCourse"><strong>Vizualizar
-                            fichas</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckNotifications"><strong>Ver
-                            notificaciones</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnFollowUpPlan"><strong>Plan
+                    <button class="btnNavegation" type="button" id="btnFollowUpPlan"><strong>Plan
                             seguimiento</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckUserManual"><strong>¿Necesitas
+                    <button class="btnNavegation" type="button" id="btnCheckNotifications"><strong>Ver
+                            notificaciones</strong></button>
+                    <button class="btnNavegation" type="button" id="btnCheckUserManual"><strong>¿Necesitas
                             ayuda?</strong></button>
                 </div>
             </div>
@@ -183,7 +188,7 @@
                                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
                         </svg>
                         <input class="form-control me-2" type="search" placeholder="Realizar busqueda"
-                            aria-label="Search" id="searchBar">
+                            aria-label="Search" id="searchBarSpaceWork">
                     </div>
                 </form>
             </div>
@@ -216,7 +221,6 @@
                                     asistencia</strong></button>
                             <button class="btnNavegation" type="button" a href="..."
                                 id="btnCheckHistory"><strong>Historial
-                                    de
                                     asistencia</strong></button>
                             <button class="btnNavegation" type="button" a href="..." id="btnMakeReport"><strong>Generar
                                     reporte</strong></button>
@@ -255,18 +259,6 @@
                             </p>
                         </div>
 
-                        <p style="margin: 1vh;">This is some placeholder content to show the scrolling behavior for
-                            modals.
-                            Instead
-                            of
-                            repeating the text in the modal, we use an inline style to set a minimum height,
-                            thereby
-                            extending the length of the overall modal and demonstrating the overflow
-                            scrolling.
-                            When
-                            content becomes longer than the height of the viewport, scrolling will move the
-                            modal as
-                            needed.</p>
                     </div>
                     <div class="modal-footer justify-content-center">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -295,6 +287,13 @@
                     <form id="responseForm">
                         <div class="modal-body d-flex flex-column align-items-center justify-content-center"
                             style="width: 100%; height: 100%;">
+                            <!-- Campo para el título de la respuesta -->
+                            <div class="mb-3" style="width: 100%;">
+                                <input type="text" class="form-control" id="titleInput"
+                                    placeholder="Escribe el título de tu respuesta" required>
+                            </div>
+
+                            <!-- Campo para la respuesta -->
                             <div class="mb-3" style="width: 100%;">
                                 <textarea class="form-control" id="answerInput" rows="3"
                                     placeholder="Escribe tu respuesta aquí..." required></textarea>
@@ -341,8 +340,7 @@
                                         <option value="11">Noviembre</option>
                                         <option value="12">Diciembre</option>
                                     </select>
-                                    <label for="selectMes" style="margin-top: 1vh;"><strong>Seleccionar
-                                            mes</strong></label>
+                                    <label for="selectMes" style="margin-top: 1vh;"><strong>Seleccionar mes</strong></label>
                                 </div>
                                 <div class="form-floating" style="width: 200px;">
                                     <select class="form-select" id="selectSemana">
@@ -352,11 +350,18 @@
                                         <option value="3">Semana 3</option>
                                         <option value="4">Semana 4</option>
                                     </select>
-                                    <label for="selectSemana" style="margin-top: 1vh;"><strong>Seleccionar
-                                            semana</strong></label>
+                                    <label for="selectSemana" style="margin-top: 1vh;"><strong>Seleccionar semana</strong></label>
                                 </div>
-                                <button class="btn btn-primary" type="button"
-                                    id="btnFiltrerCourse"><strong>Filtrar</strong></button>
+                                <div class="form-floating" style="width: 200px;">
+                                    <select class="form-select" id="selectBloque">
+                                        <option disabled selected hidden></option>
+                                        <option value="1">06:00-10:00</option>
+                                        <option value="2">10:00-14:00</option>
+                                        <option value="3">14:00-18:00</option>
+                                    </select>
+                                    <label for="selectBloque" style="margin-top: 1vh;"><strong>Seleccionar bloque</strong></label>
+                                </div>
+                                <button class="btn btn-primary" type="button" id="btnFiltrerCourse"><strong>Filtrar</strong></button>
                             </div>
                         </div>
 
@@ -469,12 +474,11 @@
 
                         </div>
 
-                        <div class="container d-flex flex-column mb-3 align-items-center justify-content-center"
-                            id="asistContainer" style="height: auto;">
-                            <button class="btn btn-primary" type="button" id="btnReport"><strong>Generar
-                                    reporte</strong></button>
-                        </div>
+                    </div>
 
+                    <div class="modal-footer justify-content-center" style="width: 100%;">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                            id="btnCloseModal"><strong>Guardar cambios</strong></button>
                     </div>
 
                     <div class="modal-footer justify-content-center" style="width: 100%;">
@@ -486,7 +490,7 @@
         </div>
 
         <!-- Modal de historial de asistencia  -->
-        <div class="modal fade" id="historyAsistModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        <div class="modal fade" style="width: 10vh;" id="historyAsistModal" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content align-items-center">
@@ -499,39 +503,47 @@
 
                     <div class="modal-body">
                         <div class="container d-flex align-items-center justify-content-center" id="filtrerContainer">
-                            <div class="d-flex align-items-center gap-3" style="width: 100%;">
-                                <div class="form-floating" style="width: 200px;">
-                                    <select class="form-select" id="selectMes">
-                                        <option disabled selected hidden></option>
-                                        <option value="1">Enero</option>
-                                        <option value="2">Febrero</option>
-                                        <option value="3">Marzo</option>
-                                        <option value="4">Abril</option>
-                                        <option value="5">Mayo</option>
-                                        <option value="6">Junio</option>
-                                        <option value="7">Julio</option>
-                                        <option value="8">Agosto</option>
-                                        <option value="9">Septiembre</option>
-                                        <option value="10">Octubre</option>
-                                        <option value="11">Noviembre</option>
-                                        <option value="12">Diciembre</option>
-                                    </select>
-                                    <label for="selectMes" style="margin-top: 1vh;"><strong>Seleccionar
-                                            mes</strong></label>
+                            <div class="container d-flex align-items-center justify-content-center" id="filtrerContainer">
+                                <div class="d-flex align-items-center gap-3" style="width: 100%;">
+                                    <div class="form-floating" style="width: 200px;">
+                                        <select class="form-select" id="selectMes">
+                                            <option disabled selected hidden></option>
+                                            <option value="1">Enero</option>
+                                            <option value="2">Febrero</option>
+                                            <option value="3">Marzo</option>
+                                            <option value="4">Abril</option>
+                                            <option value="5">Mayo</option>
+                                            <option value="6">Junio</option>
+                                            <option value="7">Julio</option>
+                                            <option value="8">Agosto</option>
+                                            <option value="9">Septiembre</option>
+                                            <option value="10">Octubre</option>
+                                            <option value="11">Noviembre</option>
+                                            <option value="12">Diciembre</option>
+                                        </select>
+                                        <label for="selectMes" style="margin-top: 1vh;"><strong>Seleccionar mes</strong></label>
+                                    </div>
+                                    <div class="form-floating" style="width: 200px;">
+                                        <select class="form-select" id="selectSemana">
+                                            <option disabled selected hidden></option>
+                                            <option value="1">Semana 1</option>
+                                            <option value="2">Semana 2</option>
+                                            <option value="3">Semana 3</option>
+                                            <option value="4">Semana 4</option>
+                                        </select>
+                                        <label for="selectSemana" style="margin-top: 1vh;"><strong>Seleccionar semana</strong></label>
+                                    </div>
+                                    <div class="form-floating" style="width: 200px;">
+                                        <select class="form-select" id="selectBloque">
+                                            <option disabled selected hidden></option>
+                                            <option value="1">06:00-10:00</option>
+                                            <option value="2">10:00-14:00</option>
+                                            <option value="3">14:00-18:00</option>
+                                        </select>
+                                        <label for="selectBloque" style="margin-top: 1vh;"><strong>Seleccionar bloque</strong></label>
+                                    </div>
+                                    <button class="btn btn-primary" type="button" id="btnFiltrerCourse"><strong>Filtrar</strong></button>
                                 </div>
-                                <div class="form-floating" style="width: 200px;">
-                                    <select class="form-select" id="selectSemana">
-                                        <option disabled selected hidden></option>
-                                        <option value="1">Semana 1</option>
-                                        <option value="2">Semana 2</option>
-                                        <option value="3">Semana 3</option>
-                                        <option value="4">Semana 4</option>
-                                    </select>
-                                    <label for="selectSemana" style="margin-top: 1vh;"><strong>Seleccionar
-                                            semana</strong></label>
-                                </div>
-                                <button class="btn btn-primary" type="button"
-                                    id="btnFiltrerCourse"><strong>Filtrar</strong></button>
                             </div>
                         </div>
 
@@ -656,7 +668,6 @@
         </div>
 
     </div>
-
     <template><!--  Cuadro de area de trabajo  -->
     </template>
 
@@ -664,6 +675,7 @@
     <script src="./View/Vista.js"></script>
     <script src="./Model/Modelo.js"></script>
     <script src="./Controller/Controlador.js"></script>
+
 
 
     <script>
