--- a/Src/index.html
+++ b/Src/index.html
@@ -491,7 +491,7 @@
             </div>
         </div>
 
-        <!-- Modal de historial de asistencia  -->
+        <!-- Modal de historial de asistencia del aprendiz -->
         <div class="modal fade" id="historyAsistModal" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog">
@@ -553,19 +553,20 @@
                         </div>
 
                         <div class="container d-flex flex-column mb-3 align-items-center justify-content-center"
-                            id="historyContainer" style="height: auto;">
-                            <div class="d-flex align-items-center mb-2" id="dayContentCardHistory"
+                            id="historyDayContainer" style="height: auto;">
+
+                            <div class="d-flex align-items-center mb-2" id="HistoryDayContentCard"
                                 style="width: 100%; max-width: 1100px;">
                                 <img src="../Resources/Img/CalendarIcon.png" alt="Imagen 1" class="imagen-sub-div"
                                     id="iconImg" style="width: 50px;">
                                 <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Lunes 12</strong>
                                 <div class="flex-grow-1">
                                 </div>
-                                <button class="btn btn-primary" type="button"
-                                    id="btnAsist"><strong>Asistido</strong></button>
+                                <button class="btn btn-primary" type="button" id="btnHistoryAsist"
+                                    style="background-color: #39a900;"><strong>Asistido</strong></button>
                             </div>
 
-                            <div class="d-flex align-items-center mb-2" id="dayContentCardHistory"
+                            <div class="d-flex align-items-center mb-2" id="HistoryDayContentCard"
                                 style="width: 100%; max-width: 1100px;">
                                 <img src="../Resources/Img/CalendarIcon.png" alt="Imagen 1" class="imagen-sub-div"
                                     id="iconImg" style="width: 50px;">
@@ -573,11 +574,11 @@
                                     13</strong>
                                 <div class="flex-grow-1">
                                 </div>
-                                <button class="btn btn-primary" type="button"
-                                    id="btnAsist"><strong>Asistido</strong></button>
+                                <button class="btn btn-primary" type="button" id="btnHistoryAsist"
+                                    style="background-color: #39a900;"><strong>Asistido</strong></button>
                             </div>
 
-                            <div class="d-flex align-items-center mb-2" id="dayContentCardHistory"
+                            <div class="d-flex align-items-center mb-2" id="HistoryDayContentCard"
                                 style="width: 100%; max-width: 1100px;">
                                 <img src="../Resources/Img/CalendarIcon.png" alt="Imagen 1" class="imagen-sub-div"
                                     id="iconImg" style="width: 50px;">
@@ -585,11 +586,13 @@
                                     14</strong>
                                 <div class="flex-grow-1">
                                 </div>
-                                <button class="btn btn-primary" type="button" id="btnAsist"
-                                    style="background-color: #fc0505;"><strong>Inasistido</strong></button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#updateJustificationModal" id="btnHistoryAsist"
+                                    style="background-color: #f6c307;">
+                                    <strong>Justificado</strong></button>
                             </div>
 
-                            <div class="d-flex align-items-center mb-2" id="dayContentCardHistory"
+                            <div class="d-flex align-items-center mb-2" id="HistoryDayContentCard"
                                 style="width: 100%; max-width: 1100px;">
                                 <img src="../Resources/Img/CalendarIcon.png" alt="Imagen 1" class="imagen-sub-div"
                                     id="iconImg" style="width: 50px;">
@@ -597,11 +600,11 @@
                                     15</strong>
                                 <div class="flex-grow-1">
                                 </div>
-                                <button class="btn btn-primary" type="button"
-                                    id="btnAsist"><strong>Asistido</strong></button>
+                                <button class="btn btn-primary" type="button" id="btnHistoryAsist"
+                                    style="background-color: #39a900;"><strong>Asistido</strong></button>
                             </div>
 
-                            <div class="d-flex align-items-center mb-2" id="dayContentCardHistory"
+                            <div class="d-flex align-items-center mb-2" id="HistoryDayContentCard"
                                 style="width: 100%; max-width: 1100px;">
                                 <img src="../Resources/Img/CalendarIcon.png" alt="Imagen 1" class="imagen-sub-div"
                                     id="iconImg" style="width: 50px;">
@@ -610,8 +613,8 @@
                                 <div class="flex-grow-1">
                                 </div>
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#uploadModal" id="btnAsist" style="background-color: #f6c307;">
-                                    <strong>Justificado</strong>
+                                    data-bs-target="#uploadJustificationModal" id="btnHistoryAsist"
+                                    style="background-color: #fc0505;"><strong>Inasistido</strong>
                                 </button>
                             </div>
 
@@ -622,8 +625,8 @@
                     <div class="modal-footer justify-content-center" style="width: 100%;">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             id="btnSaveData"><strong>Guardar cambios</strong></button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-                            id="btnSaveData"><strong>Generar reporte</strong></button>
+                        <button type="button" class="btn btn-secondary" id="btnSaveIndividualReport"><strong>Generar
+                                reporte de estudiante</strong></button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             id="btnCloseModal"><strong>Cerrar</strong></button>
                     </div>
@@ -829,9 +832,9 @@
                     </div>
 
                     <div class="modal-footer justify-content-center" style="width: 100%;">
-                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Subir plan de
-                                seguimiento</strong></button>
                         <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Actualizar plan de
+                                seguimiento</strong></button>
+                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Eliminar plan de
                                 seguimiento</strong></button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             id="btnCloseModal"><strong>Cerrar</strong></button>
@@ -840,23 +843,37 @@
             </div>
         </div>
 
-        <!-- Modal de subir archivo -->
-        <div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- Modal de subir justificación -->
+        <div class="modal fade" id="uploadJustificationModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content align-items-center">
                     <div class="modal-header">
                         <h1 class="card-title" style="color: #00304D; ">
-                            <strong>Estas vizualizando el <span style="color: #39A900;">historial
-                                    asistencia</span>:</strong>
+                            <strong>Estas realizando la subida de una <span
+                                    style="color: #39A900;">justificación</span>:</strong>
                         </h1>
                     </div>
 
                     <div class="modal-body">
 
-                        <div class="container d-flex flex-column mb-3 align-items-center justify-content-center"
-                            id="asistContainer" style="height: auto;">
+                        <div class="container d-flex flex-column align-items-center justify-content-center mb-3"
+                            id="uploadContainer" style="height: auto; width: 60vh; text-align: center;">
+                            <!-- Aquí aseguramos que el contenedor esté centrado -->
+                            <form id="responseForm" style="width: 100%; max-width: 500px;">
+                                <!-- Campo para el título de la respuesta -->
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" id="titleInput"
+                                        placeholder="Escribe el título de la justificación" required>
+                                </div>
 
-                            <form style="height: auto; margin: 8vh;">
+                                <!-- Campo para la respuesta -->
+                                <div class="mb-3">
+                                    <textarea class="form-control" id="answerInput" rows="3"
+                                        placeholder="Escribe la argumentación de la justificación" required></textarea>
+                                </div>
+
+                                <!-- Botón para subir documento -->
                                 <label for="fileUpload"
                                     class="btn btn-primary align-items-center justify-content-center"
                                     id="btnUploadFile">
@@ -872,6 +889,58 @@
                     <div class="modal-footer justify-content-center" style="width: 100%;">
                         <button type="button" class="btn btn-primary" id="btnSendMessage"><strong>Enviar
                                 respuesta</strong></button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                            id="btnCloseModal"><strong>Cerrar</strong></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal de actualizar plan de mejoramiento -->
+        <div class="modal fade" id="updateJustificationModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content align-items-center">
+                    <div class="modal-header">
+                        <h1 class="card-title" style="color: #00304D;">
+                            <strong>Estas actualizando una <span style="color: #39A900;">justificación</span>:</strong>
+                        </h1>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="container d-flex flex-column align-items-center justify-content-center mb-3"
+                            id="uploadContainer" style="height: auto; width: 60vh; text-align: center;">
+                            <!-- Aquí aseguramos que el contenedor esté centrado -->
+                            <form id="responseForm" style="width: 100%; max-width: 500px;">
+                                <!-- Campo para el título de la respuesta -->
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" id="titleInput"
+                                        placeholder="Actualice el título de la justificación" required>
+                                </div>
+
+                                <!-- Campo para la respuesta -->
+                                <div class="mb-3">
+                                    <textarea class="form-control" id="answerInput" rows="3"
+                                        placeholder="Actualice la argumentación de la justificación"
+                                        required></textarea>
+                                </div>
+
+                                <!-- Botón para subir documento -->
+                                <label for="fileUpload"
+                                    class="btn btn-primary align-items-center justify-content-center"
+                                    id="btnUploadFile">
+                                    <strong>Subir documento</strong>
+                                </label>
+                                <input type="file" id="fileUpload" style="display: none;">
+                            </form>
+
+                        </div>
+
+                    </div>
+
+                    <div class="modal-footer justify-content-center" style="width: 100%;">
+                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Actualizar justificación</strong></button>
+                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Eliminar justificación</strong></button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             id="btnCloseModal"><strong>Cerrar</strong></button>
                     </div>
