Se concluye la navegación de la pagina, quedando pendiente el anexo del manual tecnico

--- a/Src/index.html
+++ b/Src/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SeniCheck</title>
     <link rel="stylesheet" href="../Css/Styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
@@ -75,43 +74,6 @@
 
         </div>
     </template>
-
-    <template><!-- Cuadro de pantalla de inicio Instructor -->
-        <div class="container mt-0.2 d-flex justify-content-center">
-            <div class="card p-4" id="containerPrincipal">
-                <!-- Encabezado de pagina principal -->
-                <div class="titulo">
-                    <h1 class="card-title" style="color: #00304D;"><strong>Bienvenido de nuevo, ¿Qué deseas realizar el
-                            <span style="color: #39A900;">
-                                dia de hoy</span>?</h1>
-                </div>
-
-                <!-- Botones de navegacion -->
-                <div class="d-flex align-content-stretch flex-wrap" style="width: 80%; margin: 0 auto;"
-                    id="btnNavegationHome">
-                    <button class="btnNavegation" type="button" id="btnCheckCourse"><strong>Marcar
-                            asistencia</strong></button>
-                    <button class="btnNavegation" type="button" id="btnCheckHistory"><strong>Ver
-                            Historial</strong></button>
-                    <button class="btnNavegation" type="button" id="btnMakeReport"><strong>Generar
-                            reporte</strong></button>
-                    <button class="btnNavegation" type="button" id="btnFollowUpPlan"><strong>Plan
-                            seguimiento</strong></button>
-                    <button class="btnNavegation" type="button" id="btnCheckNotifications"><strong>Ver
-                            notificaciones</strong></button>
-                    <button class="btnNavegation" type="button" id="btnCheckUserManual"><strong>¿Necesitas
-                            ayuda?</strong></button>
-                </div>
-
-                <!-- Pie de pagina -->
-                <p class="pie-de-pagina" style="color:#989898; font-size: 20px; margin: 1vh;">
-                    <strong>2024 - Servicio Nacional de Aprendizaje Sena</strong>
-                </p>
-
-            </div>
-        </div>
-    </template>
-
 
     <div class="container-fluid d-flex" id="workArea">
         <!-- HTML -->
@@ -764,16 +726,22 @@
                         </h1>
                     </div>
                     <div class="modal-body">
-
                         <div style="text-align: start; margin: 1vh; font-size: 20px;">
-                            <strong style="color: #00304D;">Juan Pérez</strong>
+                            <strong id="nombreEstudiantePlan" style="color: #00304D;">Nombre del Estudiante</strong>
                             <p class="card-text">
-                                <small class="text-body-secondary" style="font-size: 15px;"><strong>Creado el 7 de
-                                        octubre
-                                        del 2024, 13:00</strong></small>
+                                <small class="text-body-secondary" style="font-size: 15px;">
+                                    <strong id="fechaPlan">Creado el 7 de octubre del 2024, 13:00</strong>
+                                </small>
+                            </p>
+
+                            <p id="descripcionPlan" style="margin-bottom: 15px;">
+                                Se ha iniciado un plan de mejoramiento para abordar las dificultades académicas del
+                                estudiante.
+                                Este plan tiene como objetivo proporcionar apoyo adicional y estrategias para superar
+                                los
+                                desafíos actuales en su proceso de aprendizaje y desarrollo académico.
                             </p>
                         </div>
-
                     </div>
                     <div class="modal-footer justify-content-center">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -939,8 +907,10 @@
                     </div>
 
                     <div class="modal-footer justify-content-center" style="width: 100%;">
-                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Actualizar justificación</strong></button>
-                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Eliminar justificación</strong></button>
+                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Actualizar
+                                justificación</strong></button>
+                        <button type="button" class="btn btn-primary" id="btnSendFillUpPlan"><strong>Eliminar
+                                justificación</strong></button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             id="btnCloseModal"><strong>Cerrar</strong></button>
                     </div>
@@ -957,22 +927,20 @@
     <script src="./Model/Modelo.js"></script>
     <script src="./Controller/Controlador.js"></script>
 
+    <!-- Script de inicialización -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            console.log('Iniciando aplicación...');
             const modelo = new Modelo();
             const vista = new Vista();
-            const app = new Controlador(modelo, vista);
+            const controlador = new Controlador(modelo, vista);
         });
     </script>
 
-    <!-- Scripts de base Boootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-        </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-        </script>
+    <!-- Bootstrap JS y Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 
